--- a/src/app/recipes/recipes.page.html
+++ b/src/app/recipes/recipes.page.html
@@ -1,11 +1,20 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Recipes</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-list>
-    
+    <ion-item *ngFor="let recipe of recipes" [routerLink]="['./', recipe.id]">
+      <ion-avatar slot="start">
+        <ion-img [src]="recipe.imageUrl" ></ion-img>
+      </ion-avatar>
+
+      <ion-label>
+        {{recipe.title}}
+      </ion-label>
+    </ion-item>
+
   </ion-list>
 </ion-content>
