--- a/src/app/recipes/recipes.page.html
+++ b/src/app/recipes/recipes.page.html
@@ -6,15 +6,6 @@
 
 <ion-content class="ion-padding">
   <ion-list>
-    <ion-item *ngFor="let recipe of recipes" [routerLink]="['./', recipe.id]">
-      <ion-avatar slot="start">
-        <ion-img [src]="recipe.imageUrl" ></ion-img>
-      </ion-avatar>
-
-      <ion-label>
-        {{recipe.title}}
-      </ion-label>
-    </ion-item>
-
+    <app-recipe-item *ngFor="let recipe of recipes" [recipeItem]="recipe"></app-recipe-item>
   </ion-list>
 </ion-content>
